cleanup and identifying problems with FrameHandlerMetadata
Signed-off-by: Lachlan Roberts <lachlan@webtide.com>