@@ -18,17 +18,9 @@
 
 package org.eclipse.jetty.websocket.jsr356.server;
 
-import org.eclipse.jetty.client.HttpClient;
-import org.eclipse.jetty.server.handler.ContextHandler;
-import org.eclipse.jetty.servlet.ServletContextHandler;
-import org.eclipse.jetty.util.TypeUtil;
-import org.eclipse.jetty.util.log.Log;
-import org.eclipse.jetty.util.log.Logger;
-import org.eclipse.jetty.util.thread.QueuedThreadPool;
-import org.eclipse.jetty.util.thread.ThreadClassLoaderScope;
-import org.eclipse.jetty.websocket.servlet.internal.WebSocketCreatorMapping;
-import org.eclipse.jetty.websocket.servlet.WebSocketUpgradeFilter;
-
+import java.util.HashSet;
+import java.util.Set;
+import java.util.concurrent.Executor;
 import javax.servlet.ServletContainerInitializer;
 import javax.servlet.ServletContext;
 import javax.servlet.ServletContextEvent;
@@ -40,9 +32,17 @@ import javax.websocket.Endpoint;
 import javax.websocket.server.ServerApplicationConfig;
 import javax.websocket.server.ServerEndpoint;
 import javax.websocket.server.ServerEndpointConfig;
-import java.util.HashSet;
-import java.util.Set;
-import java.util.concurrent.Executor;
+
+import org.eclipse.jetty.client.HttpClient;
+import org.eclipse.jetty.server.handler.ContextHandler;
+import org.eclipse.jetty.servlet.ServletContextHandler;
+import org.eclipse.jetty.util.TypeUtil;
+import org.eclipse.jetty.util.log.Log;
+import org.eclipse.jetty.util.log.Logger;
+import org.eclipse.jetty.util.thread.QueuedThreadPool;
+import org.eclipse.jetty.util.thread.ThreadClassLoaderScope;
+import org.eclipse.jetty.websocket.servlet.WebSocketUpgradeFilter;
+import org.eclipse.jetty.websocket.servlet.internal.WebSocketCreatorMapping;
 
 @HandlesTypes({ ServerApplicationConfig.class, ServerEndpoint.class, Endpoint.class })
 public class JavaxWebSocketServerContainerInitializer implements ServletContainerInitializer
@@ -261,7 +261,7 @@ public class JavaxWebSocketServerContainerInitializer implements ServletContaine
                 }
                 try
                 {
-                    ServerApplicationConfig config = clazz.getDeclaredConstructor( ).newInstance();
+                    ServerApplicationConfig config = clazz.getDeclaredConstructor().newInstance();
 
                     Set<ServerEndpointConfig> seconfigs = config.getEndpointConfigs(discoveredExtendedEndpoints);
                     if (seconfigs != null)
